fix grid layout issue

--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -54,7 +54,6 @@
 
 .ds-grid-2-1,
 .ds-grid-1-2 {
-  position: relative;
   display: grid;
   gap: var(--space-lg);
   grid-template-columns: 1fr;
